--- a/appendix.tex
+++ b/appendix.tex
@@ -1,1 +1,17 @@
-\section{Appendix}
+\section{Proofs of Theorems}\label{app:proofs}
+
+\section{Experimental Details}\label{app:setup}
+
+\subsection{Datasets}\label{app:setup:datasets}
+
+\subsection{Methods}\label{app:setup:methods}
+
+\subsection{Hyperparameters}\label{app:setup:hyperparameters}
+
+\section{%
+    Additional Experimental Results and Discussions
+}\label{app:results}
+
+\subsection{Ablation Studies}\label{app:results:ablation}
+
+\subsection{Sensitive Analyses}\label{app:results:sensitive}
