--- a/common.tex
+++ b/common.tex
@@ -22,6 +22,7 @@
 % \usepackage[numbers,sort]{natbib}
 \usepackage{tikz}
 \usepackage{pgfplots}
+\usepackage{comment}
 
 % authors
 \newcommand{\authornote}[1]{\textsuperscript{\rm {#1}}}
