--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,9 @@
 \section{Conclusion}\label{sec:conclusion}
 
 Conclusion goes here\dots{}
+This section should provide a brief summary of the paper.
+It should also highlight the contributions of the paper,
+and discuss the implications of it.
 
 
 \section{Reproducibility Statement}\label{sec:reproducibility}
@@ -41,8 +44,17 @@ The limitations section should include the following:
 \end{itemize}
 
 
-\section*{Acknowledgements}
+\section*{Acknowledgements}\label{sec:acknowledgements}
 
 This is a section to be added after paper acceptance.
 Double-blind submissions
 should not include this section.
+
+% An example snippet of acknowledgements:
+\begin{comment}
+    This research is supported
+    by National Natural Science Foundation of China
+    (\numero{62376263}),
+    and Basic Research Program of Shenzhen
+    (\numero{JCYJ20230807140507015}).
+\end{comment}
