--- a/paper.tex
+++ b/paper.tex
@@ -10,16 +10,17 @@
         Correspondence to Xitong Gao
         (\email{xt.gao@siat.ac.cn}).
     }\hspace{0.4em}\authornote{1,2},
-    Xitong Gao\samethanks[1]\authornote{1},
-    Kejiang Ye\authornote{1},
-    Cheng-Zhong Xu\authornote{3} \\
+    Xitong Gao\samethanks[1]\authornote{1}
+    % Kejiang Ye\authornote{1},
+    % Cheng-Zhong Xu\authornote{3}
+    \\
     \authornote{1}\,%
         Shenzhen Institutes of Advanced Technology,
         Chinese Academy of Sciences, China. \\
     \authornote{2}\,%
         University of Chinese Academy of Sciences, China. \\
-    \authornote{3}\,%
-        University of Macau, Macau S.A.R., China.
+    % \authornote{3}\,%
+    %     University of Macau, Macau S.A.R., China.
 }
 \date{}
 
