Fix possible compilation bugs

--- a/tables/example.tex
+++ b/tables/example.tex
@@ -8,8 +8,8 @@
 \toprule
 Example
     & \tcenter{Accuracy}
-    & \tcenter{\Delta{} FLOPs}
-    & \tcenter{\Delta{} Comm. Params} \\
+    & \tcenter{\( \Delta \) FLOPs}
+    & \tcenter{\( \Delta \) Comm. Params} \\
 \midrule
 Related A
     & \tpm{00.00\%}{0.00\%}
