--- a/paper.tex
+++ b/paper.tex
@@ -5,22 +5,9 @@
 \title{%
     Your Title Goes Here...}
 \author{%
-    Your Name Here\thanks{%
-        Equal contribution.
-        Correspondence to Xitong Gao
-        (\email{xt.gao@siat.ac.cn}).
-    }\hspace{0.4em}\authornote{1,2},
-    Xitong Gao\samethanks[1]\authornote{1}
-    % Kejiang Ye\authornote{1},
-    % Cheng-Zhong Xu\authornote{3}
-    \\
+    Your Name Here\hspace{0.4em}\authornote{1} \\
     \authornote{1}\,%
-        Shenzhen Institutes of Advanced Technology,
-        Chinese Academy of Sciences, China. \\
-    \authornote{2}\,%
-        University of Chinese Academy of Sciences, China. \\
-    % \authornote{3}\,%
-    %     University of Macau, Macau S.A.R., China.
+        Your affiliation here... \\
 }
 \date{}
 
@@ -33,7 +20,6 @@
 \input{related}
 \input{method}
 \input{results}
-% \FloatBarrier
 \input{conclusion}
 % \clearpage
 \bibliographystyle{plainnat}
