Update template to CVPR 2025

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,5 +1,3 @@
-\section{Proofs of Theorems}\label{app:proofs}
-
 \section{Experimental Details}\label{app:setup}
 
 \subsection{Datasets}\label{app:setup:datasets}
@@ -14,4 +12,4 @@
 
 \subsection{Ablation Studies}\label{app:results:ablation}
 
-\subsection{Sensitive Analyses}\label{app:results:sensitive}
+\subsection{Sensitivity Analyses}\label{app:results:sensitivity}
