--- a/related.tex
+++ b/related.tex
@@ -1,8 +1,8 @@
 \section{Related Work}\label{sec:related}
 
-For arXiv papers,
-please ensure that you find the paper on Google Scholar
-with correct publication venue / journal (if published).
-Click on the ``cite'' link below the paper title
-to get the correct BibTeX entry
-with relevant publication related information.
+% To cite arXiv papers,
+% please ensure that you find the paper on Google Scholar
+% with correct publication venue / journal (if published).
+% Click on the ``cite'' link below the paper title
+% to get the correct BibTeX entry
+% with relevant publication related information.
