--- a/paper.tex
+++ b/paper.tex
@@ -1,5 +1,12 @@
-\documentclass{article}
-\usepackage{arxiv}
+\documentclass[10pt,twocolumn,letterpaper]{article}
+
+\usepackage[review]{cvpr}
+\definecolor{cvprblue}{rgb}{0.21,0.49,0.74}
+\usepackage[pagebackref,breaklinks,colorlinks,allcolors=cvprblue]{hyperref}
+\def\paperID{*****} % TODO: Enter the Paper ID here
+\def\confName{CVPR}
+\def\confYear{2025}
+
 \input{common}
 
 \title{%
@@ -21,9 +28,11 @@
 \input{method}
 \input{results}
 \input{conclusion}
-% \clearpage
-\bibliographystyle{plainnat}
-\bibliography{references}
+{
+    \small
+    \bibliographystyle{ieeenat_fullname}
+    \bibliography{references}
+}
 \newpage
 \appendix
 % \onecolumn
